[update_profile] all controllers commented
