# internal/pkg/controllers/helloWorldController.go
@@ -4,6 +4,12 @@ import (
 	"net/http"
 )
 
+// HelloWorld godoc
+// @Title HelloWorld
+// @Summary on hello returning world
+// @ID hello-world
+// @Success 200 {string} World
+// @Router /hello [get]
 func HelloWorld(res http.ResponseWriter, req *http.Request) {
 	res.Write([]byte("World"))
 }
